# mcpforge

./: .gitignore  LICENSE  README.md  push_to_github.py  pyproject.toml  setup.py
mcpforge/: __init__.py  __main__.py  cli.py
mcpforge/commands/: __init__.py  config_cmd.py  info_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  run_cmd.py  search_cmd.py  uninstall_cmd.py  update_cmd.py  validate_cmd.py
mcpforge/utils/: __init__.py  colors.py  config.py  formatting.py  registry.py
tests/: __init__.py  test_colors.py  test_config.py
